<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ImageView
        android:id="@+id/imageviewActressPhoto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/actressImage"
        android:scaleType="centerInside" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:gravity="center_horizontal|bottom" >

        <Button
            android:id="@+id/buttonPrevious"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:onClick="previousPhoto"
            android:padding="20dp"
            android:text="@string/previous"
            android:textColor="@color/navigationButtonTextColor"
            android:textSize="15dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:onClick="nextPhoto"
            android:padding="20dp"
            android:text="@string/next"
            android:textColor="@color/navigationButtonTextColor"
            android:textSize="15dp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>